manifests/blookums/apps/gate/gatecam-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: nginx
  name: gatecam
  namespace: gate
spec:
  tls:
    - hosts:
        - gatecam.${SECRET_DOMAIN}
      secretName: gatecam-tls
  rules:
    - host: gatecam.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gate-motion
                port:
                  number: 9081
